syntax = "proto3";

package dd4.common;

option java_package = "com.digitald4.common.proto";
option java_outer_classname = "DD4Protos";

message Company {
  string name = 1;
  string website = 2;
  string slogan = 3;
  string description = 4;
  string ip_address = 5;
  string email = 6;
  string paypal = 7;
  string stat_counter_id = 8;
  string stat_counter_part = 9;
  string container = 10;
  string address = 11;
  string phone = 12;
  string fax = 13;
  string report_footer = 14;
}

message DataFile {
  int64 id = 1;
  string name = 2;
  string type = 3;
  int32 size = 4;
  bytes data = 5;
}

enum DateRange {
  UNSPECIFIED = 0;
  DAY = 1;
  WEEK = 2;
  MONTH = 3;
  CAL_MONTH = 4;
  YEAR = 5;
}

message GeneralData {
	int64 id = 1;
	int64 group_id = 2;
	int32 in_group_id = 3;
	string name = 4;
	double rank = 5;
	bool active = 6;
	string description = 7;
	string data = 8;
}

message GPSAddress {
  string address = 1;
  double latitude = 2;
  double longitude = 3;
  string unit = 4;
}

message Query {
  message Filter {
    string column = 1;
    string operator = 2;
    string value = 3;
  }
  repeated Filter filter = 1;
  message OrderBy {
    string column = 1;
    bool desc = 2;
  }
  repeated OrderBy order_by = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message User {
	int64 id = 1;
	int64 type_id = 2;
	string user_name = 3;
	string email = 4;
	string first_name = 5;
	string last_name = 6;
  string full_name = 7;
	bool disabled = 8;
	bool read_only = 9;
	string notes = 10;
	int64 last_login = 11;

  string id_token = 13;
  int64 exp_time = 14;

  // This should not be put into the UI model.
  string password = 12;
}

message ActiveSession {
  int64 id = 1;
  string id_token = 2;
  int64 exp_time = 3;
  User user = 4;
}